# voxtail_v1

./: LICENSE  package-lock.json  package.json  pyproject.toml  start_speech_api.sh  start_speech_service.py
attached_assets/: App_1749584710171.tsx  Comprehensive Guide_ Building a Multi-Language Spe_1749524734434.docx  Header_1749584703531.tsx  LICENSE_1749524807244  Pasted--usr-bin-env-python3-Streamlit-Vosk-Speech-to-Text-App-Setup-Script-This-script-helps-set-up--1749575158206_1749575158207.txt  README_1749584688217.md  SubtitleEditor_1749584703534.tsx  Timeline_1749584703534.tsx  TranslationPanel_1749584703534.tsx  VideoEditor_1749584703535.tsx  VideoPlayer_1749584703535.tsx  best_models_summary_1749524790003.csv  config_1749524793729.yaml  deployment_timeline_1749524798873.csv  feature_comparison_1749524803325.csv  model_comparison_data_1749524810628.json  model_manager_1749524815902.py  packages_1749524819834.txt  requirements_1749524823434.txt  run_app_1749524826773.bat  run_app_1749524830245.sh  script_1749524861295.py  script_1_1749524834183.py  script_2_1749524837537.py  script_3_1749524840600.py  script_4_1749524844245.py  script_5_1749524848582.py  script_6_1749524852159.py  script_7_1749524856062.py
client/: index.html
migrations/: 0000_hot_jetstream.sql
scripts/: detect_language.py
server/: db.ts  languageDetection.ts  pgStorage.ts  routes.ts  speechApiClient.ts  speechService.ts  storage.ts  supabase.ts  voskService.ts  websocketServer.ts
shared/: schema.ts
speech_api/: database.py  main.py  models.py  requirements.txt  speech_service.py  (+1 more)
(+13 files in other folders)
