[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
    "vosk>=0.3.45",
    "websockets>=15.0.1",
]
